# Tipsy-RP2350

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  pico_sdk_import.cmake  pre-flight.sh
docs/waveshare/: DEV_Config.c  DEV_Config.h  FT6336U.c  FT6336U.h  LCD_3in5.cpp  LCD_3in5.h  LCD_3in5_test.c  LVGL_example.c  README.md.txt  lv_conf.h  sample_code.txt  waveshare_rp2350_touch_lcd_3.5.h
src/: main.c  main_ui_refactor.c  tipsy_app.c  tipsy_app.h  tipsy_hal.c  tipsy_hal.h  tipsy_ui_refactor.c  tipsy_ui_refactor.h
